bstudio implementations
