# server/docs/swagger.json
@@ -16,47 +16,6 @@
     "host": "localhost:1347",
     "basePath": "/api/v1",
     "paths": {
-        "/transcode/{id}": {
-            "get": {
-                "description": "Get transcode status by ID.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "transcode"
-                ],
-                "summary": "Get transcode status",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Transcoder"
-                        }
-                    },
-                    "400": {
-                        "description": "Failure to parse the id",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrorJson"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrorJson"
-                        }
-                    }
-                }
-            }
-        },
         "/upload/audio": {
             "post": {
                 "description": "Upload, transcode and publish to ipfs an audio",
@@ -126,20 +85,50 @@
                     }
                 }
             }
+        },
+        "/upload/{id}/status": {
+            "get": {
+                "description": "Get upload status by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "upload"
+                ],
+                "summary": "Get upload status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.UploadStatusResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Failure to parse the id",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorJson"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorJson"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "models.Transcoder": {
-            "type": "object",
-            "properties": {
-                "db": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
         "server.ErrorJson": {
             "type": "object",
             "properties": {
@@ -178,6 +167,17 @@
             "type": "object",
             "properties": {
                 "cid": {
+                    "type": "string"
+                }
+            }
+        },
+        "server.UploadStatusResp": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "percentage": {
                     "type": "string"
                 }
             }
